<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item android:id="@+id/upItem"
        android:title="@string/go_up"
        android:icon="@drawable/ic_arrow_up"
        android:checkable="true"
        app:showAsAction="always" />

    <item android:id="@+id/downItem"
        android:title="@string/go_down"
        android:icon="@drawable/ic_arrow_down"
        android:checkable="true"
        app:showAsAction="always" />

    <item android:id="@+id/infoItem"
        android:title="@string/show_info"
        android:icon="@drawable/ic_info"
        android:checkable="true"
        app:showAsAction="always" />

    <item android:id="@+id/settingsItem"
        android:title="@string/show_config"
        android:icon="@drawable/ic_settings"
        android:checkable="true"
        app:showAsAction="always" />

</menu>